# cleverbotfreeapi

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: 1simple.rs  e01_barebones.rs  e01_quickstart.rs  e02_console_app.rs  e03_discord_bot.rs
src/: cleverbot.rs  cookie_generation.rs  error.rs  helpers.rs  lib.rs
