[package]
name = "cleverbotfreeapi"
version = "0.1.0"
edition = "2021"
license = "MIT"
respository = "https://github.com/rootofminus1atu/cleverbotfreeapi"

[dependencies]
chrono = "0.4.38"
md5 = "0.7.0"
parking_lot = { version = "0.12.3", features = ["send_guard"] }
percent-encoding = "2.3.1"
reqwest = "0.12.7"
ringbuffer = "0.15.0"
thiserror = "1.0.64"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
dotenvy = "0.15.7"
poise = "0.6.1"
